# lecture

./: CMakeLists.txt  README.md  README.org  frames.rviz  package.xml
launch/: euler.launch  euler.launch.xml  euler.rviz  ikkdl.launch  ikkdl.launch.xml  ikkdl.rviz  scara.launch  scara.launch.xml  scara.rviz  scara.urdf.xacro
notebook/: contacts.yaml  controller.py  demo.launch  demo.launch.xml  demo.rviz  fk.py  jsp_demo.ipynb  lmi.ipynb  markers.py  ns_demo.ipynb  qt_controller.py  robot_model.py  task5.4.ipynb
src/: CMakeLists.txt  EulerWidget.cpp  EulerWidget.h  MainWindow.cpp  MainWindow.h  QuaternionWidget.cpp  QuaternionWidget.h  RotationControl.cpp  RotationControl.h  ikkdl.cpp  main.cpp
src/euler/: CMakeLists.txt  EulerWidget.cpp  EulerWidget.h  Interpolation.cpp  Interpolation.h  MainWindow.cpp  MainWindow.h  QuaternionWidget.cpp  RotationControl.cpp  RotationControl.h  main.cpp
ui/: euler.ui  quaternion.ui
