<?xml version="1.0"?>
<package format="3">
  <name>lecture</name>
  <version>0.1.0</version>
  <description>Example programs for my robotics lecture</description>

  <maintainer email="rhaschke@techfak.uni-bielefeld.de">Robert Haschke</maintainer>
  <author email="rhaschke@techfak.uni-bielefeld.de">Robert Haschke</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>eigen</build_depend>

  <depend>roscpp</depend>
  <depend>interactive_markers</depend>
  <depend>kdl_parser</depend>
  <depend>tf_conversions</depend>

  <exec_depend>xacro</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>moveit_resources_panda_moveit_config</exec_depend>

  <export />
</package>