<?xml version="1.0"?>
<package format="3">
  <name>lecture</name>
  <version>0.1.0</version>
  <description>Example programs for my robotics lecture</description>

  <maintainer email="rhaschke@techfak.uni-bielefeld.de">Robert Haschke</maintainer>
  <author email="rhaschke@techfak.uni-bielefeld.de">Robert Haschke</author>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>eigen</build_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>interactive_markers</depend>
  <depend>kdl_parser</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_kdl</depend>
  <depend>angles</depend>

  <exec_depend>xacro</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>moveit_resources_panda_moveit_config</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>tf_transformations</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
